@@ -14,7 +14,7 @@ import ec.edu.espe.master_gateway.shared.domain.port.out.AuthorizationPort;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -71,6 +71,6 @@ public class GetRoleUsersService implements GetRoleUsersUseCase {
                 user.getFechaCreacion(),
                 user.getFechaActualizacion()
             ))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
